refactoring the project architecture
